--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "servers video files",
   "main": "server.js",
+  "nodemonConfig": {
+    "ignore": [
+      "uploads/*"
+    ]
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export $(grep -v '^#' .env | xargs) && node server.js"
+    "start": "export $(grep -v '^#' .env | xargs) && node ./node_modules/nodemon/bin/nodemon.js"
   },
   "keywords": [
     "video",
@@ -17,5 +22,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
